# rules.engine.testing

./: README.md
src/: pyproject.toml
src/clipspy/: __init__.py
src/durablerules/: __init__.py  durable_rules_test.xlsx
src/scikitlearn/: __init__.py  x_test.xlsx
